# MiLO-Middleware

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
cmake/: toolchain-stm32mp1.cmake
deploy/systemd/: milo-experimentd.service
docs/: HEADER_TEMPLATE.md  HLD.md  LLD.md  PROJECT_PLAN.md
docs/N2S/: DAY_1.md  DAY_2.md  DAY_3.md  DAY_4.md  DAY_5.md
documentation/: HLD.md  LLD.md  PROJECT_PLAN.md  REQUIREMENTS.md
include/core/: ConfigLoader.hpp  ErrorMonitor.hpp  Logger.hpp  ParameterStore.hpp  ProtocolFactory.hpp  RPCManager.hpp  SystemCoordinator.hpp
include/io/: ButtonGPIO.hpp  FileLogger.hpp  GPIOInput.hpp  OLEDDisplay.hpp  RotaryEncoderGPIO.hpp  SerialChannel.hpp
include/protocols/: Command.hpp  ExperimentProtocol.hpp  Response.hpp
include/ui/: UIController.hpp
src/: main.cpp
src/core/: ErrorMonitor.cpp  RPCManager.cpp
src/io/: ButtonGPIO.cpp  FileLogger.cpp  GPIOInput.cpp  OLEDDisplay.cpp  RotaryEncoderGPIO.cpp  SerialChannel.cpp
tests/: core_test.cpp  io_test.cpp  logger_test.cpp  param_test.cpp  rpc_test.cpp  sample_test.cpp  ui_test.cpp
tests/fakes/: FakeSerialChannel.hpp
